# azurice.github.io

./: .gitignore  .gitmodules  1.py  AGENTS.md  CLAUDE.md  Cargo.toml  Pipfile  README.md  asdasd.txt  book.toml  build.rs  bun.lockb  config.toml  flake.nix  hugo.toml  index.html  justfile  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rspress.config.ts  shadow.toml  site.config.ts  uno.config.ts  valaxy.config.ts
.claude/: settings.local.json
.github/workflows/: aoike-gh-pages.yml  deploy.yml  gh-pages.yml  mkdocs-gh-pages.yml
.shadow/: .gitignore
_待整理/: Windows注册表.md  neovim文档阅读.md  「MC x Java」.md  『计算机基础』数据.md  记一次Typecho博客部署（Published）.md
_魔/: OLL.md
aoike/: bun.lockb  farm.config.ts  index.html  package.json  pnpm-lock.yaml
aoike-valaxy/: package.json  pnpm-lock.yaml
aoike/docs/: _meta.json  index.md
aoike/src/: App.tsx  index.tsx  md.d.ts
assets/css/: _override.scss
config/_default/: author.toml  markup.toml  menu.toml  params.toml
content/: _index.md  search.md
content/page/: archives.md  search.md
content/posts/: 2022-02-25-「题解」BJTU2021届新生寒训 STL专题.md  2022-03-20-「题解」CF1650F Vitaly and Advanced Useless Algorithms.md  2022-03-20-「题解」CF19B Checkout Assistant.md  2022-03-23-「题解」P2508 [HAOI2008]圆上的整点.md  2022-03-28-「题解」P2324 [SCOI2005]骑士精神.md  2022-08-01-「题解」CF1201C Maximum Median.md  2022-08-01-「题解」CF1223C Save the Nature.md  2022-08-01-「题解」CF939E Maximize!.md  2022-08-01-「题解」P1182 数列分段 Section II.md  2022-08-01-「题解」P1873【COCI 2011+2012 5】EKO 砍树.md  2022-08-01-「题解」P3799 妖梦拼木棒.md  2022-10-05-KMP 算法 —— 前缀函数（前缀数组）.md  (+6 more)
docs/: _meta.json  index.md
farm-plugin-aoike/: Cargo.toml  farm_plugin_aoike.win32-x64-msvc.node  package.json  pnpm-lock.yaml
old_mkdocs_site/: mkdocs.yml
posts/: -WSL —— 在Windows 中使用 Linux 系统.md  KMP 算法 —— 前缀函数（前缀数组）.md  _WSL —— 在 Windows 中使用 Linux 系统.md  _changelog.md  blog.md  old test.md  使用 OhMyPosh 美化 PowerShell.md  使用哈希算法以及加盐来增强服务端密码存储安全.md  告别繁琐安装界面，使用Scoop管理Windows软件.md  大数据华为云实践作业踩坑记录（实验报告.md  提高生产力的工具们（持续更新）.md  用 Markdown 代替 ppt —— 使用 Slidev 制作演示文稿.md  记一次Manjaro KDE美化.md  记一次Typecho博客部署.md
sass/: _var.scss  index.scss
src/: README.md  SUMMARY.md  main.rs  my_biblio.bib
static/: fonts.css  index.css  search.js  uno.css
templates/: giscus.html  index.html  page.html  posts.html  search.html
tools/exif-tool/: Cargo.toml
tools/exif-tool/src/: fix_exif.rs  main.rs  sync_rrdata.rs
valaxy-addon-aoike/: package.json
valaxy-them-aoike/: package.json  pnpm-lock.yaml
xiv-market-lite/: index.html
(+963 files in other folders)
