[workspace]
members = [".", "tools/exif-tool"]
resolver = "2"

[package]
name = "azurice-blog"
version = "0.1.0"
edition = "2024"

[dependencies]
aoike.workspace = true
aoike-sycamore.workspace = true
console_error_panic_hook = "0.1.7"
sycamore = "0.9.2"

[build-dependencies]
aoike = { workspace = true, features = ["build"] }
aoike-sycamore = { workspace = true, features = ["build"] }

[workspace.dependencies]
# aoike = { path = "../aoike" }
# aoike-sycamore = { path = "../aoike/packages/aoike-sycamore" }
aoike = { git = "https://github.com/azurice/aoike-ssg", branch = "main" }
aoike-sycamore = { git = "https://github.com/azurice/aoike-ssg", branch = "main" }

[patch."https://github.com/azurice/aoike-ssg"]
aoike = { path = "../aoike-ssg" }
aoike-sycamore = { path = "../aoike-ssg/packages/aoike-sycamore" }
