[project]
name = "azurice-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Azur冰弦", email = "973562770@qq.com" }
]
dependencies = [
    "mkdocs-material>=9.5.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2.2",
    "mkdocs-git-authors-plugin>=0.7.2",
    "pymdown-extensions>=10.7",
    "mkdocs-glightbox>=0.3.6",
    "slugify>=0.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/azurice_github_io"]
