[package]
name = "exif-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
little_exif = "0.6.23"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["local-offset"] }
walkdir = "2.5"
